# HTX_Agent_Passport

./: .env.example  .env.prod  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  2026_01_01_0001-init_schema_initial_schema.py  2026_05_31_0002-audit_tree_heads_merkle_layer.py  2026_05_31_0003-credential_usage_limits.py
backend/app/: __init__.py
backend/app/core/: __init__.py  audit_chain.py  auth.py  config.py  database.py  dependencies.py  envelope_vault.py  errors.py  key_provider.py  merkle.py  rate_limiter.py  state_machine.py  sth_signing.py  vault.py
backend/app/models/: __init__.py  action.py  approval.py  audit.py  audit_tree_head.py  base.py  credential.py  enums.py  execution.py  model_call.py  passport.py  user.py
backend/app/routers/: __init__.py  actions.py  approvals.py  audit.py  auth.py  credentials.py  demo.py  passports.py  tts.py  ws.py
backend/app/schemas/: __init__.py  action_plan.py  approval.py  audit.py  auth.py  credential.py  passport.py  policy.py
backend/app/services/: __init__.py  approval_service.py  audit_merkle_service.py  audit_sth_anchor.py  audit_sth_scheduler.py  audit_writer.py  bai_client.py  capability_envelope.py  context_builder.py  credential_usage.py  credentials.py  daily_history.py  demo_scenarios.py  execution_gateway.py  htx_adapter.py  input_normalizer.py  observability.py  passports.py  planner.py  policy_diagnostics.py  policy_engine.py  policy_engine_cedar.py  policy_validator.py  recovery_manager.py  reputation_service.py  seed_data.py  simulation_engine.py  stale_price_check.py  tool_executor.py  ws_broker.py
backend/design-demos/: product-demo-video.html  screenshot.mjs  variant-a-swiss-terminal.html
backend/scripts/: check_bai_models.py  generate_ed25519_key.py
backend/tests/: conftest.py
backend/tests/eval/: framework.py  test_routing_tool_eval.py  test_safety_resilience_eval.py
backend/tests/integration/: test_actions_router.py  test_audit_router.py  test_auth_endpoint.py  test_credentials_endpoint.py  test_demo_scenarios.py  test_l2_integration.py  test_l4_e2e.py  test_l5_adversarial_chaos.py  test_migrations.py  test_passport_endpoint.py
backend/tests/unit/: test_action_plan_schema.py  test_approval_service.py  test_audit_chain.py  test_audit_merkle.py  test_audit_sth_anchor.py  test_audit_sth_s3_anchor.py  test_audit_sth_scheduler.py  test_audit_writer.py  test_auth.py  test_auto_approval_thresholds.py  test_bai_client.py  test_capability_envelope.py  test_cedar_shadow_evaluator.py  test_credential_usage.py  test_credentials_service.py  test_daily_limit_enforcement.py  test_envelope_vault.py  test_execution_gateway.py  test_htx_adapter.py  test_input_normalizer.py  test_market_provenance.py  test_observability.py  test_passports_service.py  test_planner.py  test_policy_diagnostics.py  test_policy_engine.py  test_policy_engine_pbt.py  test_policy_validator.py  test_recovery_manager.py  test_reputation_service.py  test_simulation_engine.py  test_stale_price_recheck.py  test_state_machine.py  test_sth_signing.py  test_ticker_sanity.py  test_tool_executor.py  test_vault.py
design-demos/: index.html  product-demo-video.html  variant-b-linear-dark.html  variant-c-pentagram-editorial.html
design-demos/audio/: manifest.json
docs/: AI_PRD_HTX_Agent_Passport.md  AI_PRD_HTX_Agent_Passport_CN.md  agent-intent-methodology(1).md  ci-cd-setup.md  htx-agent-passport-deck.html  project-overview.md
docs/tech-research/: 00-index.md  01-guardrails-policy-engine.md  02-audit-and-secrets.md  03-hitl-execution-concurrency.md  04-gap-summary-and-roadmap.md  05-production-upgrades.md  06-phase2-policy-and-injection.md  07-phase3-approval-llmcheck-credentials.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/design-demos/: designer-custom.html  index.html  reference-linear.html  roulette.html
frontend/e2e/: full-flow.spec.ts
frontend/public/: .gitkeep
frontend/src/app/: globals.css  landing.module.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  ApprovalModal.tsx  AuditTimeline.tsx  CredentialForm.tsx  EnvironmentBadge.tsx  ErrorBoundary.tsx  FeedbackLayer.tsx  PassportCard.tsx  PolicyEditor.tsx  STHViewer.tsx  (+2 more)
nginx/: nginx.conf
(+17 files in other folders)
