[project]
name = "htx-agent-passport-backend"
version = "0.1.0"
description = "HTX Agent Passport - 后端服务（FastAPI + Policy Engine + 审计哈希链）"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HTX Agent Passport Team" }]

dependencies = [
    # Web 框架
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.27,<0.31",
    "python-multipart>=0.0.9",
    # 数据校验与 ORM
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    # JSON Schema 校验（Policy DSL / ActionPlan）
    "jsonschema>=4.21,<5.0",
    # 安全：AES-256-GCM 加密 + JWT 签发
    "cryptography>=42.0,<44.0",
    "python-jose[cryptography]>=3.3,<4.0",
    # HTTP 客户端（B.AI / HTX 适配器）
    "httpx>=0.27,<0.28",
    # 工具
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=4.1,<6.0",
    # 属性测试（PBT）
    "hypothesis>=6.98,<7.0",
    # 测试客户端
    "httpx>=0.27,<0.28",
    # 代码质量
    "ruff>=0.3,<0.7",
    "mypy>=1.8,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "pbt: property-based tests (hypothesis)",
    "integration: integration tests requiring database",
    "slow: slow-running tests",
    "eval: L3 eval-driven tests (routing/tool/safety/efficiency/quality)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
