[project]
name = "htx-agent-passport-backend"
version = "0.1.0"
description = "HTX Agent Passport - 后端服务（FastAPI + Policy Engine + 审计哈希链）"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HTX Agent Passport Team" }]

dependencies = [
    # Web 框架
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.27,<0.31",
    "python-multipart>=0.0.9",
    # 数据校验与 ORM
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    # JSON Schema 校验（Policy DSL / ActionPlan）
    "jsonschema>=4.21,<5.0",
    # 安全：AES-256-GCM 加密 + JWT 签发
    "cryptography>=42.0,<44.0",
    "python-jose[cryptography]>=3.3,<4.0",
    # HTTP 客户端（B.AI / HTX 适配器）
    "httpx>=0.27,<0.28",
    # WebSocket 客户端（火山引擎 TTS V3 API；tts 路由顶层依赖）
    "websockets>=12.0,<17.0",
    # 火山引擎 TTS 官方 SDK（豆包语音合成模型 2.0；tts 路由顶层依赖）
    "volcengine-audio>=0.2,<1.0",
    # 工具
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=4.1,<6.0",
    # 属性测试（PBT）
    "hypothesis>=6.98,<7.0",
    # 测试客户端
    "httpx>=0.27,<0.28",
    # 代码质量
    "ruff>=0.3,<0.7",
    "mypy>=1.8,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "pbt: property-based tests (hypothesis)",
    "integration: integration tests requiring database",
    "slow: slow-running tests",
    "eval: L3 eval-driven tests (routing/tool/safety/efficiency/quality)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # 行宽由 formatter 处理
    "B008",  # FastAPI 惯用法：Depends()/Query() 作为参数默认值是官方推荐写法
]

[tool.ruff.lint.per-file-ignores]
# 测试代码放宽部分规范：测试夹具命名（SessionLocal）、中文测试函数名、
# importorskip 后置导入、单字母变量、TestClient 前向引用等均为测试场景的合理写法。
"tests/**" = ["N802", "N806", "E402", "E741", "F821"]
# 网络错误统一转译为 HTXAdapterError 重新抛出，不保留原始链路（对外屏蔽底层 httpx 细节）。
"app/services/htx_adapter.py" = ["B904"]
# 既有公共异常类名，重命名会波及大量调用方，保持现状。
"app/core/state_machine.py" = ["N818"]
# 后台任务的容错性 try/except/pass 语义清晰，无需改写为 contextlib.suppress。
"app/services/audit_sth_scheduler.py" = ["SIM105"]
"app/services/daily_history.py" = ["SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
